Tried to fix perform... nothing worked